--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,9 +6,9 @@
 - name: Put nginx config
   copy: src=nginx.conf dest=/etc/nginx/nginx.conf
 - name: Make static dir
-  file: name={{ STATIC_ROOT }}/ state=directory owner=nginx
+  file: name="{{ STATIC_ROOT }}/" state=directory owner=nginx
 - name: Make pidfile dir writeable
-  file: name={{ PIDFILE_DIR }}/ state=directory owner=nginx
+  file: name="{{ PIDFILE_DIR }}/" state=directory owner=nginx
 - name: Put static assets
-  copy: src={{ item }} dest={{ STATIC_ROOT }}/ owner=nginx
-  with_items: {{ ASSET_PATHS }}
+  copy: src="{{ item }}" dest="{{ STATIC_ROOT }}/" owner=nginx
+  with_items: "{{ ASSET_PATHS }}"
