--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,5 +2,6 @@
 STATIC_ROOT: /static
 PIDFILE_DIR: /run/nginx
 ASSET_PATHS: []
-PROXY_DJANGO: no 
-PROXY_DJANGO_PASS: "http://django:8080/"
+PROXY: no 
+PROXY_PASS: "http://django:8080/"
+PROXY_LOCATION: "/"
