--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,5 +3,5 @@ STATIC_ROOT: /static
 PIDFILE_DIR: /run/nginx
 ASSET_PATHS: []
 PROXY: no 
-PROXY_PASS: "http://django:8080/"
-PROXY_LOCATION: "/"
+PROXY_PASS: ""
+PROXY_LOCATION: ""
