--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -51,14 +51,14 @@
   - /var/log/nginx
   - /var/lib/nginx
 
-- name: Remove logs files, if they exist
+- name: Clear log files
   file:
-    path: "/var/log/{{ item }}"
-    state: absent
-  with_items:
-  - error.log
+    path: "/var/log/nginx/{{ item }}"
+    state: absent 
+  with_files:
   - access.log
- 
+  - error.log
+
 - name: Make directories owned by nginx:root 
   command: chown nginx:root {{ item }}
   with_items:
