--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,11 +1,9 @@
 ---
-- name: Copy repo file
-  copy:
-    src: "{{ role_path }}/files/nginx.repo"
-    dest: /etc/yum.repos.d/nginx.repo
-    owner: root
-    group: root
-    mode: 0664
+
+- name: Install epel-release
+  yum:
+    name: epel-release
+    state: present
 
 - name: Install nginx
   yum:
