--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,10 @@ services:
 before_install:
   - sudo apt-add-repository 'deb http://archive.ubuntu.com/ubuntu trusty-backports universe'
   - sudo apt-get update -qq
-  - sudo apt-get install -y -o Dpkg::Options::="--force-confold" --force-yes docker-engine
 
 install:
   # Install the latest Ansible Container and Ansible
-  - pip install git+https://github.com/ansible/ansible-container.git
+  - pip install -e git+https://github.com/ansible/ansible-container.git@develop#egg=ansible_container
   - pip install ansible
 
 script:
