--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -113,6 +113,7 @@
   synchronize:
     src: "{{ item }}/"
     dest: "{{ STATIC_ROOT }}/"
+    rsync_opts: --checksum
   with_items: "{{ ASSET_PATHS }}"
   remote_user: nginx
 
