--- a/tests/ansible.cfg
+++ b/tests/ansible.cfg
@@ -1,3 +1,2 @@
-[defaults]
-inventory=./inventory
-nocows=1
+# Set any ansible.cfg overrides in this file.
+# See: https://docs.ansible.com/ansible/intro_configuration.html#explanation-of-values-by-section
